--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v13:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'org.jsoup:jsoup:1.8.2'
     compile 'com.mcxiaoke.volley:library:1.0.+'
