--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.2'
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.mcxiaoke.volley:library:1.0.+'
-    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.google.android.gms:play-services-location:7.8.0'
+    compile 'com.google.android.gms:play-services-maps:7.8.0'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
