--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.0+'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'org.jsoup:jsoup:1.7.2'
+    compile 'com.android.volley:volley:1.0.0'
     compile group: 'io.reactivex', name: 'rxandroid', version: '1.2.1'
 }
 
