--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 15 00:22:07 IDT 2015
-sdk.dir=C\:\\Users\\Leo\\AppData\\Local\\Android\\sdk
+#Wed Aug 24 04:40:33 IDT 2016
+sdk.dir=C\:\\Users\\Kristina\\AppData\\Local\\Android\\Sdk
