--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 01 03:57:24 IDT 2016
-sdk.dir=C\:\\Users\\Kristina\\AppData\\Local\\Android\\Sdk
+#Tue Sep 06 21:07:56 IDT 2016
+sdk.dir=C\:\\Users\\Leo\\AppData\\Local\\Android\\sdk
