--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 06 21:07:56 IDT 2016
-sdk.dir=C\:\\Users\\Leo\\AppData\\Local\\Android\\sdk
+#Wed Dec 27 03:34:07 IST 2017
+sdk.dir=/Users/user/Library/Android/sdk
