--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "me.leoprok.petzyandroid"
@@ -34,6 +37,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
