--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 14 21:00:09 IST 2018
-ndk.dir=C\:\\Users\\Leo\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Leo\\AppData\\Local\\Android\\sdk
+#Mon Mar 19 04:48:17 IST 2018
+sdk.dir=/Users/user/Library/Android/sdk
